--- a/SocialLunch/app/src/main/res/layout/activity_signup.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_signup.xml
@@ -9,8 +9,24 @@
                 tools:context=".SignupActivity">
 
     <TextView
-        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:id="@+id/appTitle"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="40dp"
+        android:layout_marginTop="49dp"
+        />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivLinkedinConnect"
+        android:src="@drawable/linkedin_signup"
+        android:onClick="onLinkedinConnect"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
