--- a/SocialLunch/app/src/main/res/layout/activity_home_page.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_home_page.xml
@@ -8,9 +8,11 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.sociallunch.android.activities.HomePageActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:text="Chat"
+        android:id="@+id/btnChat"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
