--- a/SocialLunch/app/src/main/res/menu/menu_main.xml
+++ b/SocialLunch/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sociallunch.android.activities.MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/action_search"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_filter"
+        android:title="@string/action_filter"
+        android:orderInCategory="200"
+        android:icon="@drawable/ic_action_filter"
+        app:showAsAction="ifRoom" />
 </menu>
