Add facebook login and integrate with Firebase

--- a/SocialLunch/app/src/main/res/layout/activity_signup.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_signup.xml
@@ -20,12 +20,11 @@
         android:layout_marginTop="49dp"
         />
 
-    <ImageView
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivLinkedinConnect"
-        android:src="@drawable/linkedin_signup"
-        android:onClick="onLinkedinConnect"
+        android:layout_gravity="center_horizontal"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         />
