--- a/SocialLunch/app/src/main/res/layout/activity_chat.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_chat.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
 
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#ffffffff">
 
     <ListView
         android:id="@android:id/list"
