--- a/SocialLunch/app/src/main/res/layout/chat_message.xml
+++ b/SocialLunch/app/src/main/res/layout/chat_message.xml
@@ -5,6 +5,11 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivAuthor" />
+
     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
