--- a/SocialLunch/app/src/main/res/layout/activity_chat.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_chat.xml
@@ -30,11 +30,19 @@
             android:lines="1"
             android:singleLine="true" />
 
-        <ImageButton
+        <IconButton
+            android:layout_width="100dp"
+            android:layout_height="44dp"
+            android:layout_margin="5dp"
+            android:text="{fa-paper-plane-o} Send"
+            android:layout_centerHorizontal="true"
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_send" />
+            android:background="#00B9B7"
+            android:textColor="#ffffffff"
+            android:layout_alignParentBottom="true"
+            android:textStyle="italic"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 
 
