--- a/SocialLunch/app/src/main/res/layout/activity_signup.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_signup.xml
@@ -2,30 +2,48 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.sociallunch.android.activities.SignupActivity">
 
-    <TextView
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/ivBackground"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login_background"/>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:id="@+id/appTitle"
+        android:id="@+id/ivLogo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="40dp"
-        android:layout_marginTop="49dp"
-        />
+        android:minHeight="200dp"
+        android:minWidth="200dp"
+        android:layout_marginTop="90dp"
+        android:src="@drawable/logo_large" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivLogoText"
+        android:minHeight="75dp"
+        android:minWidth="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/ivLogo"
+        android:layout_alignLeft="@+id/ivLogo"
+        android:layout_alignStart="@+id/ivLogo"
+        android:src="@drawable/logo_text"/>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="60dp"
+        android:layout_below="@+id/ivLogoText"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
