--- a/SocialLunch/app/src/main/res/layout/activity_create_profile.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_create_profile.xml
@@ -3,6 +3,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.sociallunch.android.activities.CreateProfileActivity">
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/onboarding_background"/>
+
     <com.andtinder.view.CardContainer
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mCardContainer"
