--- a/SocialLunch/app/src/main/res/layout/chat_message.xml
+++ b/SocialLunch/app/src/main/res/layout/chat_message.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivAuthor" />
+        android:layout_margin="10dp"
+        android:minHeight="60dp"
+        android:minWidth="60dp"
+        android:id="@+id/ivAuthorImage" />
 
-    <TextView
-        android:id="@+id/author"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:id="@+id/llAuthor"
+        android:layout_toRightOf="@id/ivAuthorImage">
+
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="#8D1263"
+            android:text="Jonny Appleseed" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:text="5min Ago" />
+        </LinearLayout>
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="20dp"
+        android:layout_below="@id/llAuthor"
+        android:layout_toRightOf="@id/ivAuthorImage"
+        android:text="Some Really Interesting Message" />
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp" />
-
-</LinearLayout>
+</RelativeLayout>
