[Onboarding] Migrated Facebook app id from string resource file to app constants resource file.

--- a/SocialLunch/app/src/main/res/values/app_constants.xml
+++ b/SocialLunch/app/src/main/res/values/app_constants.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="google_maps_api_key">AIzaSyBTaKu-5a1Cx1OsbFCd_ZXWeBN564HxB7I</string>
+    <string name="fb_app_id">1423528877943479</string>
 </resources>
