--- a/SocialLunch/app/src/main/res/values-v19/styles.xml
+++ b/SocialLunch/app/src/main/res/values-v19/styles.xml
@@ -4,5 +4,6 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="holoSpinnerStyle">@android:style/Widget.Holo.Light.Spinner</item>
     </style>
 </resources>
