[Discovery] Added activity for venue selection.

--- a/SocialLunch/app/src/main/res/values/styles.xml
+++ b/SocialLunch/app/src/main/res/values/styles.xml
@@ -6,4 +6,7 @@
         <item name="holoSpinnerStyle">@style/Widget.AppCompat.Spinner</item>
     </style>
 
+    <style name="AppThemeWithTranslucentStatus" parent="AppTheme">
+    </style>
+
 </resources>
