--- a/SocialLunch/app/src/main/res/values-v19/styles.xml
+++ b/SocialLunch/app/src/main/res/values-v19/styles.xml
@@ -3,7 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowTranslucentStatus">true</item>
         <item name="holoSpinnerStyle">@android:style/Widget.Holo.Light.Spinner</item>
+    </style>
+
+    <style name="AppThemeWithTranslucentStatus" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
