[Discovery] Implemented integration with Yelp API.

--- a/SocialLunch/app/src/main/res/menu/menu_venue_selection.xml
+++ b/SocialLunch/app/src/main/res/menu/menu_venue_selection.xml
@@ -2,4 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sociallunch.android.activities.VenueSelectionActivity">
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/action_search"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
