[Discovery] Display map markers in map of venue selection view.

--- a/SocialLunch/app/src/main/res/values/app_constants.xml
+++ b/SocialLunch/app/src/main/res/values/app_constants.xml
@@ -6,4 +6,5 @@
     <string name="yelp_consumer_secret">3GmUnZD4_iJcnO5LdqjYTSa0A_c</string>
     <string name="yelp_token">jEJZNA3OImZO78ZuitAo4bkZU5feRuWj</string>
     <string name="yelp_token_secret">CHPb0pz1ikbvPLwX8RiyvJ7gU9s</string>
+    <integer name="lm_map_bounds_padding">140</integer>
 </resources>
