--- a/SocialLunch/app/src/main/res/layout/fragment_map.xml
+++ b/SocialLunch/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sociallunch.android.fragments.VenueSelectionMapFragment">
+    tools:context="com.sociallunch.android.fragments.MapFragment">
 
     <fragment
         android:id="@+id/map"
@@ -9,4 +9,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</FrameLayout>
+</RelativeLayout>
