--- a/SocialLunch/app/src/main/res/menu/menu_search.xml
+++ b/SocialLunch/app/src/main/res/menu/menu_search.xml
@@ -7,7 +7,8 @@
         android:title="@string/action_search"
         android:orderInCategory="100"
         android:icon="@drawable/ic_action_search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
     <item
         android:id="@+id/action_filter"
         android:title="@string/action_filter"
