--- a/SocialLunch/app/src/main/res/layout/fragment_profile.xml
+++ b/SocialLunch/app/src/main/res/layout/fragment_profile.xml
@@ -5,16 +5,19 @@
     android:padding="16dp"
     tools:context="com.sociallunch.android.fragments.ProfileFragment">
 
-    <ImageView
+
+    <com.facebook.login.widget.ProfilePictureView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ivProfileImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/ivProfileImage"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        />
+        app:is_cropped="true"
+    />
 
     <LinearLayout
         android:orientation="vertical"
