--- a/SocialLunch/app/src/main/res/layout/toolbar.xml
+++ b/SocialLunch/app/src/main/res/layout/toolbar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:minHeight="?attr/actionBarSize"
-    android:background="?attr/colorPrimaryDark">
+    app:theme="@style/ToolBarStyle"
+    android:background="@color/dark_purple">
 </android.support.v7.widget.Toolbar>
