--- a/SocialLunch/app/src/main/res/menu/menu_suggestion.xml
+++ b/SocialLunch/app/src/main/res/menu/menu_suggestion.xml
@@ -6,11 +6,21 @@
         android:id="@+id/action_join"
         android:title="@string/action_join"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_join_icon"
+        android:title="@string/action_join"
+        android:orderInCategory="200"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_chat"
         android:title="@string/action_chat"
-        android:orderInCategory="200"
-        app:showAsAction="ifRoom" />
+        android:orderInCategory="300"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_chat_icon"
+        android:title="@string/action_chat"
+        android:orderInCategory="400"
+        app:showAsAction="always" />
 
 </menu>
