--- a/SocialLunch/app/src/main/res/values-v19/styles.xml
+++ b/SocialLunch/app/src/main/res/values-v19/styles.xml
@@ -4,9 +4,18 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="holoSpinnerStyle">@android:style/Widget.Holo.Light.Spinner</item>
+        <item name="colorPrimary">@color/dark_purple</item>
+        <item name="colorPrimaryDark">@color/light_purple</item>
     </style>
 
     <style name="AppThemeWithTranslucentStatus" parent="AppTheme">
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <!-- ToolBar -->
+    <style name="ToolBarStyle" parent="Theme.AppCompat">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
     </style>
 </resources>
