--- a/SocialLunch/app/src/main/res/layout/activity_suggestion.xml
+++ b/SocialLunch/app/src/main/res/layout/activity_suggestion.xml
@@ -16,6 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-
+    <FrameLayout
+        android:id="@+id/flJoined"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
