--- a/SocialLunch/app/src/main/res/layout/item_joined_user.xml
+++ b/SocialLunch/app/src/main/res/layout/item_joined_user.xml
@@ -1,23 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <ImageView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical">
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:minHeight="60dp"
-        android:minWidth="60dp"
-        android:id="@+id/ivProfileImage" />
+        android:id="@+id/llUser"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvUserName"
-        android:layout_width="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_height="wrap_content"
-        android:textColor="#8D1263"
-        android:text="Jonny Appleseed"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:id="@+id/ivProfileImage" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="#8D1263"
+            android:text="Jonny Appleseed"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
+        <TextView
+            android:id="@+id/tvGoing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="120dp"
+            android:textColor="#536271"
+            android:text="Going |"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+
+        <IconTextView
+            android:id="@+id/tvThumb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#009C8A"
+            android:textSize="26sp"
+            android:text="@string/thumb_up"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
