Interface. Mas Bonita!

--- a/SocialLunch/app/src/main/res/layout/item_suggestion.xml
+++ b/SocialLunch/app/src/main/res/layout/item_suggestion.xml
@@ -5,41 +5,6 @@
     android:padding="6dip"
     android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/ivImage" />
-
-    <LinearLayout
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="6dip"
-        android:layout_marginStart="6dip"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:id="@+id/tvName" />
-        <ImageView
-            android:layout_width="84dip"
-            android:layout_height="17dip"
-            android:id="@+id/ivRating"
-            android:scaleType="fitXY"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:id="@+id/tvAddress" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvCategories" />
-    </LinearLayout>
-
     <IconTextView
         android:id="@+id/tvThumb"
         android:layout_width="wrap_content"
@@ -47,14 +12,16 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:textColor="#009C8A"
-        android:textSize="18sp"
+        android:textColor="@color/bright_teal"
+        android:textSize="30sp"
         android:text="@string/clock"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/emo_kid"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:id="@+id/tvMeetingTime" />
 
 </LinearLayout>
