--- a/SocialLunch/app/src/main/res/layout/drawer_nav_item.xml
+++ b/SocialLunch/app/src/main/res/layout/drawer_nav_item.xml
@@ -21,6 +21,7 @@
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:gravity="center_vertical"
+        android:textColor="@color/white"
         android:paddingRight="40dp"/>
 
 </RelativeLayout>
