--- a/SocialLunch/app/src/main/res/layout/fragment_suggestion.xml
+++ b/SocialLunch/app/src/main/res/layout/fragment_suggestion.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="6dip"
+        android:padding="5dip"
         android:orientation="horizontal">
 
         <ImageView
@@ -50,12 +50,30 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tvCategories" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvMeetingTime" />
-
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+        <IconTextView
+            android:id="@+id/tvThumb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/bright_teal"
+            android:textSize="20sp"
+            android:text="@string/clock"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/emo_kid"
+            android:textSize="18sp"
+            android:id="@+id/tvMeetingTime" />
     </LinearLayout>
 
     <fragment
