--- a/SocialLunch/app/src/main/res/layout/fragment_map.xml
+++ b/SocialLunch/app/src/main/res/layout/fragment_map.xml
@@ -6,6 +6,7 @@
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
+        android:transitionName="map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
